Implemented initial list UI

--- a/src/app/costs-page/list/list-item/comment/comment.component.html
+++ b/src/app/costs-page/list/list-item/comment/comment.component.html
@@ -1,1 +1,14 @@
-<p>comment works!</p>
+<div class="comment py-1 flex">
+  <div>
+    <div class="comment-type">
+      Internal
+    </div>
+  </div>
+  <div>Comment 1</div>
+  <div>
+    <span>Mr. Agency BO</span>
+    <span>1 Mar 2021 14:15</span>
+    <img src="/assets/icons/edit.svg" class="icon" alt="Edit">
+    <img src="/assets/icons/delete.svg" class="icon" alt="Delete">
+  </div>
+</div>
