--- a/src/app/costs-page/list/list.component.html
+++ b/src/app/costs-page/list/list.component.html
@@ -1,1 +1,28 @@
-<p>list works!</p>
+<div class="list mb-4">
+  <div class="list-header flex justify-between px-2 py-3">
+    <div class="w-15">
+      Port Expenses
+    </div>
+    <div class="w-20">
+      Account Code
+    </div>
+    <div class="w-20 text-right">
+      Quoted
+    </div>
+    <div class="w-20 text-right">
+      Screened
+    </div>
+    <div class="w-25">
+    </div>
+  </div>
+
+  <app-list-item></app-list-item>
+  <div class="summary flex px-2 py-4">
+    <div class="w-35 semi-bold">
+      Total
+    </div>
+    <div class="w-20 text-right">Quoted</div>
+    <div class="w-20 text-right">Screened</div>
+    <div class="w-20 text-center"></div>
+  </div>
+  </div>
