--- a/src/styles.scss
+++ b/src/styles.scss
@@ -137,3 +137,7 @@ $spacings: $spacing0 $spacing1 $spacing2 $spacing3 $spacing4 $spacing5 $spacing6
 .semi-bold {
 	font-weight: 500;
 }
+
+.icon {
+	height: 1rem;
+}
