--- a/src/app/costs-page/costs-page.component.html
+++ b/src/app/costs-page/costs-page.component.html
@@ -1,1 +1,11 @@
-<p>costs-page works!</p>
+<div class="flex justify-between">
+  <h1>COSTS</h1>
+  <div>
+    <span>Currency</span>
+    <select name="" id="" class="p-1 currency-select">
+      <option value="SGD">SGD</option>
+    </select>
+    <span>1 USD = 1.334 SGD</span>
+  </div>
+</div>
+<app-list></app-list>
