--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 $primary: #007cac;
 $primary-light: lighten($primary, 63%);
-$secondary: #3D3D3D;
-$secondary-light: lighten($secondary, 50%);
-$secondary-xlight: lighten($secondary, 65%);
+$secondary: #425660;
+$secondary-light: lighten($secondary, 25%);
+$secondary-xlight: lighten($secondary, 55%);
 $disabled: lighten($secondary, 50%);
 $text-white: white;
