Implemented comment UI

--- a/src/app/costs-page/list/list-item/comment/comment.component.html
+++ b/src/app/costs-page/list/list-item/comment/comment.component.html
@@ -1,14 +1,20 @@
-<div class="comment py-1 flex">
-  <div>
+<div class="comment py-2 flex items-center">
+  <div class="w-10">
     <div class="comment-type">
-      Internal
+      type
     </div>
   </div>
-  <div>Comment 1</div>
-  <div>
-    <span>Mr. Agency BO</span>
-    <span>1 Mar 2021 14:15</span>
-    <img src="/assets/icons/edit.svg" class="icon" alt="Edit">
-    <img src="/assets/icons/delete.svg" class="icon" alt="Delete">
+  <div class="w-75">comment</div>
+  <div class="w-25 flex justify-between items-center">
+    <div>
+      author
+    </div>
+    <div class="color-secondary-light">
+      date
+    </div>
+    <div>
+      <img src="/assets/icons/edit.svg" class="icon px-1" alt="Edit" title="Edit">
+      <img src="/assets/icons/delete.svg" class="icon px-1" alt="Delete" title="Delete">
+    </div>
   </div>
 </div>
