Implemented new comment UI

--- a/src/app/costs-page/list/list-item/new-comment/new-comment.component.html
+++ b/src/app/costs-page/list/list-item/new-comment/new-comment.component.html
@@ -1,1 +1,9 @@
-<p>New Comment</p>
+<div class="flex gap-10 justify-between items-center py-2">
+    <select name="" class="comment-type-select p-1">
+      <option value="" selected disabled hidden>Select comment type</option>
+      <option value="">Internal</option>
+      <option value="">External</option>
+    </select>
+    <input type="text" disabled class="comment-input p-1" placeholder="Type comment">
+    <button disabled>Add</button>
+</div>
