--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 $primary: #007cac;
 $primary-light: lighten($primary, 63%);
-$secondary: #425660;
+$secondary: #37454d;
 $secondary-light: lighten($secondary, 25%);
 $secondary-xlight: lighten($secondary, 55%);
 $disabled: lighten($secondary, 50%);
