--- a/src/app/costs-page/costs-page.component.scss
+++ b/src/app/costs-page/costs-page.component.scss
@@ -1,3 +1,12 @@
+@import "../../styles/variables.scss";
+
 .currency-select {
   width: 8rem;
+}
+
+h1 {
+  font-size: 1rem;
+  font-weight: 500;
+  color: darken($primary, 10%);
+  text-transform: uppercase;
 }
