Added data to list and list item components and displayed them in the ui

--- a/src/app/costs-page/costs-page.component.html
+++ b/src/app/costs-page/costs-page.component.html
@@ -12,4 +12,5 @@
         {{ currencySelectForm.controls.currencySelect.value }}</span></span>
   </div>
 </div>
-<app-list></app-list>
+<app-list *ngFor="let cost of costs.costs" [cost]="cost" [currentCurrency]="selectedCurrency" [daCurrency]="daCurrency">
+</app-list>
