--- a/src/app/costs-page/list/list.component.scss
+++ b/src/app/costs-page/list/list.component.scss
@@ -1,12 +1,5 @@
 @import "../../../styles/variables.scss";
 
-h1 {
-  font-size: 1rem;
-  font-weight: 500;
-  color: darken($primary, 10%);
-  text-transform: uppercase;
-}
-
 .list-header {
   color: $text-white;
   background: $primary;
@@ -16,4 +9,5 @@ h1 {
 .summary {
   border: 1px solid $secondary-xlight;
   border-top: 1px solid $primary;
+  color: $secondary;
 }
