Added data to comment component ui

--- a/src/app/costs-page/list/list-item/comment/comment.component.html
+++ b/src/app/costs-page/list/list-item/comment/comment.component.html
@@ -1,16 +1,16 @@
 <div class="comment py-2 flex items-center">
   <div class="w-10">
-    <div class="comment-type">
-      type
+    <div class="comment-type" [ngClass]="{'internal': comment.type === 'Internal', 'external': comment.type === 'External'}">
+      {{ comment.type }}
     </div>
   </div>
-  <div class="w-75">comment</div>
+  <div class="w-75">{{ comment.comment }}</div>
   <div class="w-25 flex justify-between items-center">
     <div>
-      author
+      {{ comment.author }}
     </div>
     <div class="color-secondary-light">
-      date
+      {{ comment.date | date:'d MMM YYY hh:mm' }}
     </div>
     <div>
       <img src="/assets/icons/edit.svg" class="icon px-1" alt="Edit" title="Edit">
