--- a/src/app/costs-page/list/list-item/new-comment/new-comment.component.html
+++ b/src/app/costs-page/list/list-item/new-comment/new-comment.component.html
@@ -1,9 +1,12 @@
-<div class="flex gap-10 justify-between items-center py-2">
-    <select name="" class="comment-type-select p-1">
-      <option value="" selected disabled hidden>Select comment type</option>
-      <option value="">Internal</option>
-      <option value="">External</option>
+<form [formGroup]="newCommentForm">
+  <div class="flex gap-10 justify-between items-center py-2">
+    <select formControlName="commentType" class="comment-type-select p-1">
+      <option value="placeholder" selected disabled hidden>Select comment type</option>
+      <option value="Internal">Internal</option>
+      <option value="External">External</option>
     </select>
-    <input type="text" disabled class="comment-input p-1" placeholder="Type comment">
-    <button disabled>Add</button>
-</div>
+    <input formControlName="comment" type="text" [attr.disabled]="newCommentForm.controls.commentType.pristine ? true : null"
+      class="comment-input p-1" placeholder="Type comment">
+    <button [disabled]="newCommentForm.invalid">Add</button>
+  </div>
+</form>
