--- a/src/app/costs-page/list/list-item/list-item.component.html
+++ b/src/app/costs-page/list/list-item/list-item.component.html
@@ -8,7 +8,8 @@
     </div>
     <div class="w-20 text-right">
       <div>
-        <span class="font-s color-secondary-light">{{currentCurrency.currency}} </span>{{ quoted.amount * currentCurrency.exchangeRate | number:'1.2-2' }}
+        <span class="font-s color-secondary-light">{{currentCurrency.currency}} </span>{{ quoted.amount *
+        currentCurrency.exchangeRate | number:'1.2-2' }}
       </div>
       <div class="font-s color-secondary-light pt-1">
         USD {{ quoted.amount * daCurrency.exchangeRate | number:'1.2-2' }}
@@ -16,16 +17,23 @@
     </div>
     <div class="w-20 text-right">
       <div>
-        <span class="font-s color-secondary-light">{{currentCurrency.currency}} </span>{{ screened.amount * currentCurrency.exchangeRate | number:'1.2-2' }}
+        <span class="font-s color-secondary-light">{{currentCurrency.currency}} </span>{{ screened.amount *
+        currentCurrency.exchangeRate | number:'1.2-2' }}
       </div>
       <div class="font-s color-secondary-light pt-1">
         USD {{ screened.amount * daCurrency.exchangeRate | number:'1.2-2' }}
       </div>
     </div>
     <div class="w-25 text-center">
-      <img src="/assets/icons/comment.svg" class="icon" alt="Comments" (click)="showComments = !showComments">
-      <ng-container *ngIf="costItem.comments"> {{ costItem.comments.length }}
-      </ng-container>
+      <div class="p-1 cursor-pointer" (click)="showComments = !showComments">
+        <img src="/assets/icons/comment.svg" class="icon align-middle" alt="Comments">
+        <ng-container *ngIf="costItem.comments">
+          <span class="align-middle pl-1">{{ costItem.comments.length }}</span>
+        </ng-container>
+        <ng-container *ngIf="!costItem.comments">
+          <span class="align-middle pl-1">0</span>
+        </ng-container>
+      </div>
     </div>
   </div>
   <div class="comments-container px-4" *ngIf="showComments">
