--- a/src/app/costs-page/list/list.component.html
+++ b/src/app/costs-page/list/list.component.html
@@ -17,25 +17,25 @@
   </div>
 
   <app-list-item *ngFor="let costItem of cost.costItems" [costItem]="costItem" [currentCurrency]="currentCurrency"
-    [daCurrency]="daCurrency"></app-list-item>
+    [daExchangeRate]="daExchangeRate"></app-list-item>
   <div class="summary flex items-center px-2 py-2">
     <div class="w-35 semi-bold">
       Total
     </div>
     <div class="w-20 text-right">
       <div>
-        <span class="font-s color-secondary-light">{{ currentCurrency.currency }}</span> {{ totalQuoted * currentCurrency.exchangeRate | number:'1.2-2' }}
+        <span class="font-s color-secondary-light">{{ currentCurrency.toCurrency }}</span> {{ totalQuoted * currentCurrency.exchangeRate | number:'1.2-2' }}
       </div>
       <div class="font-s color-secondary-light pt-1">
-        USD {{ totalQuoted * daCurrency.exchangeRate | number:'1.2-2' }}
+        USD {{ totalQuoted * daExchangeRate | number:'1.2-2' }}
       </div>
     </div>
     <div class="w-20 text-right">
       <div>
-        <span class="font-s color-secondary-light">{{ currentCurrency.currency }}</span> {{ totalScreened * currentCurrency.exchangeRate | number:'1.2-2' }}
+        <span class="font-s color-secondary-light">{{ currentCurrency.toCurrency }}</span> {{ totalScreened * currentCurrency.exchangeRate | number:'1.2-2' }}
       </div>
       <div class="font-s color-secondary-light pt-1">
-        USD {{ totalScreened * daCurrency.exchangeRate | number:'1.2-2' }}</div>
+        USD {{ totalScreened * daExchangeRate | number:'1.2-2' }}</div>
     </div>
     <div class="w-20 text-center"></div>
   </div>
