Fixed small style issues

--- a/src/app/costs-page/list/list-item/comment/comment.component.html
+++ b/src/app/costs-page/list/list-item/comment/comment.component.html
@@ -13,8 +13,8 @@
       {{ comment.date | date:'d MMM YYY hh:mm' }}
     </div>
     <div>
-      <img src="/assets/icons/edit.svg" class="icon px-1" alt="Edit" title="Edit">
-      <img src="/assets/icons/delete.svg" class="icon px-1" alt="Delete" title="Delete">
+      <img src="/assets/icons/edit.svg" class="icon px-1 select-none" alt="Edit" title="Edit">
+      <img src="/assets/icons/delete.svg" class="icon px-1 select-none" alt="Delete" title="Delete">
     </div>
   </div>
 </div>
